update for merge

--- a/coops/ai_evolutionary.tex
+++ b/coops/ai_evolutionary.tex
@@ -21,11 +21,9 @@ Don’t forget to shuffle all decks before the battle.\\
 
 This AI is designed with a map with these starting conditions:
 
-\textbf{Starting Resources:}\par
-\resources{5}{2}{0}
+\textbf{Starting Resources:} 5 \svg{gold}, 2 \svg{building_materials}, 0 \svg{valuables}
 
-\textbf{Starting Income:}\par
-\resources{10}{0}{1}
+\textbf{Starting Income:} 10 \svg{gold}, 0 \svg{building_materials}, 1 \svg{valuables}
 
 \textbf{Starting Units:}
 \begin{itemize}
