[PL] Translate Force of Will

--- a/translations/force_of_will.tex/cs.po
+++ b/translations/force_of_will.tex/cs.po
@@ -6,7 +6,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: Homm 3BG-mission-book\n"
-"POT-Creation-Date: 2024-08-28 18:16+0200\n"
+"POT-Creation-Date: 2024-08-28 22:41+0200\n"
 "PO-Revision-Date: 2024-08-28 17:40+0200\n"
 "Last-Translator: Automatically generated\n"
 "Language-Team: none\n"
@@ -221,7 +221,7 @@ msgstr ""
 #: clash/force_of_will.tex:46
 #, no-wrap
 msgid ""
-"\\textbf{For a 2-player scenario:}\n"
+"\\textbf{For a 2-player Scenario:}\n"
 "\\begin{itemize}\n"
 "  \\item 2 × Starting (I) Map Tile\n"
 "  \\item 2 × Near (IV--V) Map Tile\n"
@@ -243,7 +243,7 @@ msgstr ""
 #: clash/force_of_will.tex:54
 #, no-wrap
 msgid ""
-"\\textbf{For a 4-player scenario:}\n"
+"\\textbf{For a 3-player Scenario:}\n"
 "\\begin{itemize}\n"
 "  \\item 3 × Starting (I) Map Tile\n"
 "  \\item 3 × Near (IV--V) Map Tile\n"
@@ -333,8 +333,8 @@ msgid ""
 "  \\end{itemize}\n"
 "  \\item Follow these steps when Combat begins against Neutral Units at the Dragon Utopia:\n"
 "  \\begin{itemize}\n"
-"    \\item Place up to 4 of your unit cards freely onto the center row of the Combat Board.\n"
-"    \\item The enemy player controlling the Neutral Units places each Neutral unit in each of the 4 corners of the Combat Board.\n"
+"    \\item Place up to 4 of your Unit Cards freely onto the center row of the Combat Board.\n"
+"    \\item The enemy player controlling the Neutral Units places each Neutral Unit in each of the 4 corners of the Combat Board.\n"
 "  \\end{itemize}\n"
 "\\end{itemize}\n"
 "\n"
