Fix movement glyph

--- a/clash/force_of_will.tex
+++ b/clash/force_of_will.tex
@@ -67,7 +67,7 @@ At the end of the \nth{12} Round, if there is no winner, all players lose the Sc
 
 \textbf{\nth{5} and \nth{9} Rounds (2-player Scenario only):}
 \begin{itemize}
-  \item The second player gains 1 \svg{movement}.
+  \item The second player gains 1 \svgeven{movement}.
 \end{itemize}
 
 \subsection*{\MakeUppercase{Additional Rules}}
