--- a/translations/force_of_will.tex/fr.po
+++ b/translations/force_of_will.tex/fr.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: Homm 3BG-mission-book\n"
-"POT-Creation-Date: 2024-08-28 22:41+0200\n"
+"POT-Creation-Date: 2024-08-28 22:57+0200\n"
 "PO-Revision-Date: 2024-08-28 17:40+0200\n"
 "Last-Translator: Automatically generated\n"
 "Language-Team: none\n"
@@ -242,7 +242,7 @@ msgstr ""
 msgid ""
 "\\textbf{\\nth{5} and \\nth{9} Rounds (2-player Scenario only):}\n"
 "\\begin{itemize}\n"
-"  \\item The second player gains 1 \\svg{movement}.\n"
+"  \\item The second player gains 1 \\svgeven{movement}.\n"
 "\\end{itemize}\n"
 "\n"
 msgstr ""
