--- a/translations/force_of_will.tex/pl.po
+++ b/translations/force_of_will.tex/pl.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: Homm 3BG-mission-book\n"
-"POT-Creation-Date: 2024-08-28 22:41+0200\n"
+"POT-Creation-Date: 2024-08-28 22:57+0200\n"
 "PO-Revision-Date: 2024-08-28 17:40+0200\n"
 "Last-Translator: Automatically generated\n"
 "Language-Team: none\n"
@@ -309,13 +309,13 @@ msgstr ""
 msgid ""
 "\\textbf{\\nth{5} and \\nth{9} Rounds (2-player Scenario only):}\n"
 "\\begin{itemize}\n"
-"  \\item The second player gains 1 \\svg{movement}.\n"
+"  \\item The second player gains 1 \\svgeven{movement}.\n"
 "\\end{itemize}\n"
 "\n"
 msgstr ""
 "\\textbf{Rundy 5. i 9. (tylko Scenariusz dla 2 graczy):}\n"
 "\\begin{itemize}\n"
-"  \\item Drugi gracz zyskuje 1 \\svg{movement}.\n"
+"  \\item Drugi gracz zyskuje 1 \\svgeven{movement}.\n"
 "\\end{itemize}\n"
 "\n"
 
@@ -342,7 +342,7 @@ msgid ""
 "\n"
 msgstr ""
 "\\begin{itemize}\n"
-"  \\item Gdy gracz Odwiedza Obelisk, rzuca 2 \\svg{treasure} i wybiera jedne wynik.\n"
+"  \\item Gdy gracz Odwiedza Obelisk, rzuca 2 \\svg{treasure} i wybiera jeden wynik.\n"
 "  \\item Gracz nie może użyć karty Dyplomacji, aby ominąć Walkę na polu Smoczej Utopii.\n"
 "  \\item Gdy Bohater przemieszcza się na pole Smoczej Utopii, musi walczyć z następującą liczbą Neutralnych Jednostek w zależności od wybranego poziomu trudności:\n"
 "  \\begin{itemize}\n"
