--- a/metadata.tex
+++ b/metadata.tex
@@ -120,6 +120,9 @@
 \newcommand{\svgunit}[2][10]{%
   {\raisebox{-0.1\height}{\includesvg[height=#1px]{\svgs/\detokenize{#2}.svg}}}%
 }%
+\newcommand{\svgeven}[2][10]{%
+  \includesvg[height=#1px]{\svgs/\detokenize{#2}.svg}%
+}%
 
 \renewcommand{\labelitemi}{
   \begin{tikzpicture}
