--- a/translations/force_of_will.tex/cs.po
+++ b/translations/force_of_will.tex/cs.po
@@ -6,7 +6,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: Homm 3BG-mission-book\n"
-"POT-Creation-Date: 2024-08-28 22:41+0200\n"
+"POT-Creation-Date: 2024-08-28 22:57+0200\n"
 "PO-Revision-Date: 2024-08-28 17:40+0200\n"
 "Last-Translator: Automatically generated\n"
 "Language-Team: none\n"
@@ -307,13 +307,13 @@ msgstr ""
 msgid ""
 "\\textbf{\\nth{5} and \\nth{9} Rounds (2-player Scenario only):}\n"
 "\\begin{itemize}\n"
-"  \\item The second player gains 1 \\svg{movement}.\n"
+"  \\item The second player gains 1 \\svgeven{movement}.\n"
 "\\end{itemize}\n"
 "\n"
 msgstr ""
 "\\textbf{5. a 9. Kolo (pouze pro Scénář 2 hráčů):}\n"
 "\\begin{itemize}\n"
-"  \\item Druhý hráč získává 1 \\svg{movement}.\n"
+"  \\item Druhý hráč získává 1 \\svgeven{movement}.\n"
 "\\end{itemize}\n"
 "\n"
 
