--- a/translations/force_of_will.tex/force_of_will.tex.pot
+++ b/translations/force_of_will.tex/force_of_will.tex.pot
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2024-08-28 22:41+0200\n"
+"POT-Creation-Date: 2024-08-28 22:57+0200\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -241,7 +241,7 @@ msgstr ""
 msgid ""
 "\\textbf{\\nth{5} and \\nth{9} Rounds (2-player Scenario only):}\n"
 "\\begin{itemize}\n"
-"  \\item The second player gains 1 \\svg{movement}.\n"
+"  \\item The second player gains 1 \\svgeven{movement}.\n"
 "\\end{itemize}\n"
 "\n"
 msgstr ""
