use draft scenario

--- a/draft-scenarios/metadata.tex
+++ b/draft-scenarios/metadata.tex
@@ -467,6 +467,8 @@
 
 % \include{scenarios/your_scenario.tex}
 
+\include{scenarios/ai_evolutionary.tex}
+
 \include{sections/back_cover.tex}
 
 \end{document}
