--- a/translations/force_of_will.tex/cs.po
+++ b/translations/force_of_will.tex/cs.po
@@ -351,8 +351,8 @@ msgstr ""
 "  \\end{itemize}\n"
 "  \\item Dodržujte tyto kroky, když začne Boj proti Neutrálním Jednotkám na Poli Dračí Utopie:\n"
 "  \\begin{itemize}\n"
-"    \\item Umístěte až 4 své karty Jednotek volně do středního řádku Desky Bojiště.\n"
-"    \\item Nepřátelský hráč ovládající Neutrální Jednotky umístí každou Neutrální jednotku do jednoho ze 4 rohů Desky Bojiště.\n"
+"    \\item Umístěte až 4 své Karty Jednotek volně do středního řádku Desky Bojiště.\n"
+"    \\item Nepřátelský hráč ovládající Neutrální Jednotky umístí každou Neutrální Jednotku do jednoho ze 4 rohů Desky Bojiště.\n"
 "  \\end{itemize}\n"
 "\\end{itemize}\n"
 "\n"
