[PL] Force of Will + fixes (#104)

--- a/clash/force_of_will.tex
+++ b/clash/force_of_will.tex
@@ -36,7 +36,7 @@ This Scenario is played over 12 Rounds.
 \subsection*{\MakeUppercase{Map Setup}}
 Take the following Map Tiles and arrange them as shown in the Scenario map layout:
 
-\textbf{For a 2-player scenario:}
+\textbf{For a 2-player Scenario:}
 \begin{itemize}
   \item 2 × Starting (I) Map Tile
   \item 2 × Near (IV--V) Map Tile
@@ -44,7 +44,7 @@ Take the following Map Tiles and arrange them as shown in the Scenario map layou
   \item 1 × Center (VI--VII) Map Tile, which must contain the Dragon Utopia Field
 \end{itemize}
 
-\textbf{For a 4-player scenario:}
+\textbf{For a 3-player Scenario:}
 \begin{itemize}
   \item 3 × Starting (I) Map Tile
   \item 3 × Near (IV--V) Map Tile
@@ -67,7 +67,7 @@ At the end of the \nth{12} Round, if there is no winner, all players lose the Sc
 
 \textbf{\nth{5} and \nth{9} Rounds (2-player Scenario only):}
 \begin{itemize}
-  \item The second player gains 1 \svg{movement}.
+  \item The second player gains 1 \svgeven{movement}.
 \end{itemize}
 
 \subsection*{\MakeUppercase{Additional Rules}}
@@ -86,8 +86,8 @@ During this Scenario:
   \end{itemize}
   \item Follow these steps when Combat begins against Neutral Units at the Dragon Utopia:
   \begin{itemize}
-    \item Place up to 4 of your unit cards freely onto the center row of the Combat Board.
-    \item The enemy player controlling the Neutral Units places each Neutral unit in each of the 4 corners of the Combat Board.
+    \item Place up to 4 of your Unit Cards freely onto the center row of the Combat Board.
+    \item The enemy player controlling the Neutral Units places each Neutral Unit in each of the 4 corners of the Combat Board.
   \end{itemize}
 \end{itemize}
 
