--- a/translations/force_of_will.tex/cs.po
+++ b/translations/force_of_will.tex/cs.po
@@ -6,7 +6,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: Homm 3BG-mission-book\n"
-"POT-Creation-Date: 2024-08-28 18:16+0200\n"
+"POT-Creation-Date: 2024-08-28 22:57+0200\n"
 "PO-Revision-Date: 2024-08-28 17:40+0200\n"
 "Last-Translator: Automatically generated\n"
 "Language-Team: none\n"
@@ -221,7 +221,7 @@ msgstr ""
 #: clash/force_of_will.tex:46
 #, no-wrap
 msgid ""
-"\\textbf{For a 2-player scenario:}\n"
+"\\textbf{For a 2-player Scenario:}\n"
 "\\begin{itemize}\n"
 "  \\item 2 × Starting (I) Map Tile\n"
 "  \\item 2 × Near (IV--V) Map Tile\n"
@@ -243,7 +243,7 @@ msgstr ""
 #: clash/force_of_will.tex:54
 #, no-wrap
 msgid ""
-"\\textbf{For a 4-player scenario:}\n"
+"\\textbf{For a 3-player Scenario:}\n"
 "\\begin{itemize}\n"
 "  \\item 3 × Starting (I) Map Tile\n"
 "  \\item 3 × Near (IV--V) Map Tile\n"
@@ -252,7 +252,7 @@ msgid ""
 "\\end{itemize}\n"
 "\n"
 msgstr ""
-"\\textbf{Scénář pro 4 hráče:}\n"
+"\\textbf{Scénář pro 3 hráče:}\n"
 "\\begin{itemize}\n"
 "  \\item 3 × Startovní (I) Dílek Mapy\n"
 "  \\item 3 × Blízký (IV--V) Dílek Mapy\n"
@@ -307,13 +307,13 @@ msgstr ""
 msgid ""
 "\\textbf{\\nth{5} and \\nth{9} Rounds (2-player Scenario only):}\n"
 "\\begin{itemize}\n"
-"  \\item The second player gains 1 \\svg{movement}.\n"
+"  \\item The second player gains 1 \\svgeven{movement}.\n"
 "\\end{itemize}\n"
 "\n"
 msgstr ""
 "\\textbf{5. a 9. Kolo (pouze pro Scénář 2 hráčů):}\n"
 "\\begin{itemize}\n"
-"  \\item Druhý hráč získává 1 \\svg{movement}.\n"
+"  \\item Druhý hráč získává 1 \\svgeven{movement}.\n"
 "\\end{itemize}\n"
 "\n"
 
@@ -333,8 +333,8 @@ msgid ""
 "  \\end{itemize}\n"
 "  \\item Follow these steps when Combat begins against Neutral Units at the Dragon Utopia:\n"
 "  \\begin{itemize}\n"
-"    \\item Place up to 4 of your unit cards freely onto the center row of the Combat Board.\n"
-"    \\item The enemy player controlling the Neutral Units places each Neutral unit in each of the 4 corners of the Combat Board.\n"
+"    \\item Place up to 4 of your Unit Cards freely onto the center row of the Combat Board.\n"
+"    \\item The enemy player controlling the Neutral Units places each Neutral Unit in each of the 4 corners of the Combat Board.\n"
 "  \\end{itemize}\n"
 "\\end{itemize}\n"
 "\n"
@@ -351,8 +351,8 @@ msgstr ""
 "  \\end{itemize}\n"
 "  \\item Dodržujte tyto kroky, když začne Boj proti Neutrálním Jednotkám na Poli Dračí Utopie:\n"
 "  \\begin{itemize}\n"
-"    \\item Umístěte až 4 své karty Jednotek volně do středního řádku Desky Bojiště.\n"
-"    \\item Nepřátelský hráč ovládající Neutrální Jednotky umístí každou Neutrální jednotku do jednoho ze 4 rohů Desky Bojiště.\n"
+"    \\item Umístěte až 4 své Karty Jednotek volně do středního řádku Desky Bojiště.\n"
+"    \\item Nepřátelský hráč ovládající Neutrální Jednotky umístí každou Neutrální Jednotku do jednoho ze 4 rohů Desky Bojiště.\n"
 "  \\end{itemize}\n"
 "\\end{itemize}\n"
 "\n"
